--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /workspace.xml
 # Rider ignored files
 /.idea.Launcher.iml
+/.idea/.idea.Launcher/.idea/workspace.xml
 /modules.xml
 /projectSettingsUpdater.xml
 /contentModel.xml
@@ -11,3 +12,5 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
+bin/
+obj/
