--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Rider ignored files
-/.idea.Launcher.iml
-/.idea/.idea.Launcher/.idea/workspace.xml
-/modules.xml
-/projectSettingsUpdater.xml
-/contentModel.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-bin/
-obj/
+.idea
+*/bin
+*/obj
